asthma-app/src/style.css
/* ... */
.card-width {
  width: 60vw;
  max-width: 95vw;
}

.card-header {
  font-size: 150%;
  margin-bottom: calc(var(--vh, 1vh) * 2.0);
}

.card-header-small {
  font-size: 120%;
  margin-bottom: calc(var(--vh, 1vh) * 1.0);
}

.card-sub-header-small {
  font-size: 120%;
}

.card-header-tiny {
  font-size: 60%;
  margin-top: calc(var(--vh, 1vh) * -1.5);
}

/*.card-image {*/
/*  !*height: 30vh;*!*/
/*  object-fit: contain;*/
/*  width: 100%;*/
/*  max-height: 100%;*/
/*  !*max-width: 38vh;*!*/
/*}*/

.card-image {
  object-fit: contain;
  width: 100%;
  height: 100%;
  /*width: auto;*/
  /*height: auto;*/
  /*display: block;*/
}

.stacked-button-container {
  position: absolute;
  width: 100vw;
  top: calc(var(--vh, 1vh) * 50.0);
  left: 50vw;
  transform: translate(-50%, 0%);
  align-items: center;
  justify-content: center;
  display: grid;
  height: calc(var(--vh, 1vh) * 10.6);
  /*padding: 2vh 1.5vh 0 2vh;*/
  z-index: 100;
  grid-template-columns: 0.15fr 0.7fr 0.15fr;
  @media only screen and (max-width: 500px) {
    grid-template-columns: 0.2fr 0.6fr 0.2fr;
  }
}

.stacked-button-container-landscape {
  transform: translate(-50%, -10%);
  height: calc(var(--vh, 1vh) * 15.0);
}

.stacked-button {
  pointer-events: auto;
  border: 1px transparent solid;
  border-radius: 50%;
  background-color: rgba(0, 0, 0, 0.6);
  color: rgba(155, 155, 155, 0.6);
  transition: 0.3s;
  /*font-size: calc(7px + calc(var(--vh, 1vh) * 3.0));*/
  padding-top: 0;
  padding-bottom: 0;
  text-align: center;
  width: calc(var(--vh, 1vh) * 8.0);
  height: calc(var(--vh, 1vh) * 8.0);
  max-width: 14vw;
  max-height: 14vw;
  margin: 0;
}

.stacked-button-landscape {
  width: calc(var(--vh, 1vh) * 13.0);
  height: calc(var(--vh, 1vh) * 13.0);
}

.stacked-button:hover {
  background-color: rgba(255, 255, 255, 0.9);
  color: rgba(150, 150, 150, 0.9);
}

.stacked-button:active {
  background-color: rgba(150, 150, 150, 0.8) !important;
  color: white !important;
  transition: 0.05s;
}

.intro-card-footer {
  margin-top: calc(var(--vh, 1vh) * -1.0);
  padding: 0 calc(var(--vh, 1vh) * 0.5) 0 calc(var(--vh, 1vh) * 0.5);
  width: 100%;
  display: grid;
  grid-template-columns: 0.5fr 0.5fr;
  color: #7a7a7a;
}

.final-card-button-container {
  margin-top: calc(var(--vh, 1vh) * 2.0);
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.click-through {
  pointer-events: none;
}

.quiz-headers {
  height: calc(var(--vh, 1vh) * 14.0);
  margin-top: calc(var(--vh, 1vh) * (-2.0));
  color: #834522;
  z-index: 20;
  max-font-size: calc(var(--vh, 1vh) * 3.4);
}

.quiz-text {
  font-weight: normal;
  margin-top: calc(var(--vh, 1vh) * (2.0));
  font-size: calc(var(--vh, 1vh) * 3.5);
}

.quiz-media-outer-container {
  width: 100vw;
  height: calc(var(--vh, 1vh)* 34.0);
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0;
}

.quiz-media {
  object-fit: cover;
  margin-top: calc(var(--vh, 1vh) * 2.0);
  height: calc(var(--vh, 1vh) * 30.0);
  width: calc(var(--vh, 1vh) * 30.0);
}

.quiz-card-outer-container {
  width: 100vw;
  height: calc(var(--vh, 1vh)* 73.3);
  display: flex;
  /*align-items: center;*/
  justify-content: center;
  padding: 0;
}

.quiz-card-inner-container {
  height: 92.5%;
  width: 80vw;
  margin: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.quiz-card-dividing-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.quiz-card {
  display: grid;
  grid-template-columns: 1fr 0.1fr 1fr;
  font-size: 140%;
  font-style: normal;
  color: #834522;
  /*text-shadow: 2px 2px 2px rgba(50, 50, 50, 0.8);*/
  background-color: transparent;
  width: 72vw;
  height: 84%;
  transition: 0.3s;
  border-radius: 3px;
  /*box-shadow:*/
  /*    0 12px calc(var(--vh, 1vh) * 12.0) calc(-1 * 10px) rgba(73, 50, 50, 0.8),*/
  /*    0 10px calc(var(--vh, 1vh) * 1.2) calc(-1 * 10px) rgba(73, 50, 50, 0.7);*/
  padding: calc(var(--vh, 1vh) * 2.0);
  /*margin: calc(var(--vh, 1vh) * 2.0) 0 calc(var(--vh, 1vh) * 2.0) 0;*/
}

.quiz-card:hover {
  cursor: pointer;
  /*width: 80vw;*/
  /*height: 93%;*/
  transform: scale(1.1);
  /*margin: 0;*/
}

.popup-container {
  top: 0;
  left: 0;
  position: fixed;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: rgba(0, 0, 0, 0.4);
  z-index: 1000;
}

.popup {
  background-color: white;
  color: rgb(50, 50, 50);
  width: calc(var(--vh, 1vh) * 25.0);
  height: calc(var(--vh, 1vh) * 25.0);
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  border-radius: 3px;
  box-shadow:
      0 12px calc(var(--vh, 1vh) * 12.0) calc(-1 * 10px) rgba(73, 50, 50, 0.4),
      0 10px calc(var(--vh, 1vh) * 1.2) calc(-1 * 10px) rgba(73, 50, 50, 0.3);
  padding: calc(var(--vh, 1vh) * 2.0);
}

.answer-popup-icon {
  margin-bottom: calc(var(--vh, 1vh) * 2.0);
  width: calc(var(--vh, 1vh) * 8.0);
  height: calc(var(--vh, 1vh) * 8.0);
}

.reset-popup {
  flex-direction: column;
}

.summary-outer-container {
  width: 100vw;
  height: calc(var(--vh, 1vh)* 100.0);
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0;
}

.congratulations-outer-container {
  width: 100vw;
  height: calc(var(--vh, 1vh)* 100.0);
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0;
}

.inner-container {
  width: 80vw;
  margin: 0 0 calc(var(--vh, 1vh) * 1.0) 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.congratulations-image-container {
  margin-top: calc(var(--vh, 1vh)* 10.0);
  height: calc(var(--vh, 1vh)* 35.0);
}

.media-container {
  height: calc(var(--vh, 1vh) * 28.0);
}
/* ... */

